Fixed sidebar modal size on mobile

--- a/katalog/static/css/sidebar-modal.css
+++ b/katalog/static/css/sidebar-modal.css
@@ -8,6 +8,7 @@
     position: fixed;
     margin: auto;
     width: 420px;
+    max-width: 100%;
     height: 100%;
     -webkit-transform: translate3d(0%, 0, 0);
         -ms-transform: translate3d(0%, 0, 0);
